# mastermind-strategy

./: Building.md  CMakeLists.txt  Doxyfile  Manual.md  Mastermind.cbp  Mastermind.sln  Mastermind.vcxproj  Mastermind.vcxproj.filters  Mastermind_old.vcxproj  Overview.md  Profiling.md  ProjectHome.md  README  ReleaseNotes.md  Results.txt  TODO  mmstrat.md  wiki2pod
Mastermind/trunk/: Mastermind.sln  Mastermind.vcxproj  Mastermind.vcxproj.filters  Results.txt
Mastermind/trunk/doc/: Doxyfile  newstyle.css
Mastermind/trunk/src/: CallCounter.cpp  CallCounter.h  CodeBreaker.cpp  CodeBreaker.h  Codeword.cpp  Codeword.h  Compare.cpp  Compare.h  Enumerate.h  Feedback.cpp  Feedback.h  FifoMemoryManager.h  Frequency.cpp  Frequency.h  MMConfig.cpp  MMConfig.h  Main.cpp  RoutineSelector.h  Scan.cpp  Scan.h  StrategyTree.cpp  StrategyTree.h  Test.cpp  Test.h
book/: appendix.tex
cmake/: FindSSE.cmake
doc/: Doxyfile  MyLayout.xml  abstract.tex  appendix.tex  equiv.tex  heuristic.tex  intro.tex  mastermind.bib  mastermind.tex  optimal.tex  variant.tex
lib/: Algorithm.hpp  CMakeLists.txt  Codeword.cpp  ColorEquivalence.cpp  Compare.cpp  ConstraintEquivalence.cpp  Engine.hpp  Equivalence.hpp  HeuristicStrategy.hpp  Mastermind.hpp  Mastermind.vcxproj  OptimalCodeBreaker.cpp  Permutation.hpp  Registry.hpp  Rules.hpp  State.hpp  Strategy.hpp
lib/util/: bitmask.hpp  call_counter.hpp  hr_timer.hpp
src/: Algorithm.cpp  Algorithm.hpp  AlignedAllocator.hpp  Benchmark.hpp  CMakeLists.txt  CallCounter.cpp  CallCounter.h  CodeBreaker.cpp  CodeBreaker.h  CodeBreaker.hpp  Codeword.cpp  Codeword.h  Codeword.hpp  CodewordList.hpp  ColorEquivalence.cpp  Compare.cpp  ConstraintEquivalence.cpp  CpuInfo.cpp  CpuInfo.h  Engine.cpp  Engine.hpp  Enumerate.cpp  Environment.cpp  Environment.hpp  Equivalence.hpp  Feedback.cpp  Feedback.h  Feedback.hpp  Frequency.cpp  Generation.cpp  HRTimer.h  HeuristicCodeBreaker.cpp  HeuristicCodeBreaker.hpp  HeuristicStrategy.hpp  Heuristics.hpp  Interactive.cpp  Intrinsic.hpp  MMConfig.cpp  Main.cpp  Mask.cpp  (+28 more)
src/util/: aligned_allocator.hpp  bitmask.hpp  call_counter.hpp  choose.hpp  frequency_table.hpp  hr_timer.hpp  intrinsic.hpp  partition.hpp  pool_allocator.hpp  range.hpp  simd.hpp  simple_tree.hpp  wrapped_float.hpp  zip_iterator.hpp
strats/: p4c6r-knuth.txt  p4c6r-koyama-2.txt  p4c6r-neuwirth.txt
tags/release-1.0.0/: Doxyfile  Mastermind.vcxproj.filters
tags/release-1.0.0/doc/: mastermind.bib  mastermind.tex  mmstrat.pod  newstyle.css  optimal.tex  variant.tex
tags/release-1.0.0/src/: CodeBreaker.hpp  Codeword.hpp  ColorEquivalence.cpp  Generation.cpp  Main.cpp  Mask.cpp  ObviousStrategy.hpp  OptimalStrategy.hpp  SimpleStrategy.hpp  StrategyTree.hpp
tags/release-1.0.0/strats/: Results.txt  p4c6r-knuth.txt
tags/release-1.0.0/tests/: CMakeLists.txt  (+1 more)
tests/: test-mmstrat.pl
trunk/: CMakeLists.txt  Mastermind.cbp  Mastermind.sln  Mastermind.vcxproj  Mastermind.vcxproj.filters  Mastermind_old.sln  TODO
trunk/book/: equiv.tex  intro.tex  random.tex
trunk/doc/: abstract.tex  appendix.tex  equiv.tex  heuristic.tex  implement.tex  intro.tex  mastermind.bib  mastermind.tex  optimal.tex  random.tex  variant.tex
trunk/lib/: Algorithm.hpp  CMakeLists.txt  CodeBreaker.cpp  Codeword.hpp  Compare.cpp  ConstraintEquivalence.cpp  DummyEquivalenceFilter.cpp  Generation.cpp  Mask.cpp  Mastermind.vcxproj.filters  ObviousStrategy.hpp  OptimalCodeBreaker.cpp  Registry.hpp  Strategy.hpp  StrategyTree.cpp
trunk/lib/util/: aligned_allocator.hpp  intrinsic.hpp  partition.hpp  range.hpp  simd.hpp  simple_tree.hpp
trunk/src/: Algorithm.cpp  Algorithm.hpp  AlignedAllocator.hpp  Benchmark.hpp  CMakeLists.txt  CallCounter.cpp  CodeBreaker.cpp  CodeBreaker.h  CodeBreaker.hpp  Codeword.cpp  Codeword.hpp  CodewordList.cpp  CodewordList.hpp  CodewordRules.hpp  ColorEquivalence.cpp  Compare.cpp  Compare.h  ConstraintEquivalence.cpp  CpuInfo.cpp  CpuInfo.h  DummyEquivalenceFilter.cpp  Engine.cpp  Engine.hpp  Enumerate.cpp  Environment.cpp  Environment.hpp  Equivalence.cpp  Equivalence.hpp  Feedback.cpp  Feedback.h  Feedback.hpp  Frequency.cpp  Frequency.h  Generation.cpp  HRTimer.cpp  HRTimer.h  HeuristicCodeBreaker.cpp  HeuristicCodeBreaker.hpp  HeuristicStrategy.hpp  Interactive.cpp  (+27 more)
trunk/src/util/: aligned_allocator.hpp  bitmask.hpp  call_counter.hpp  choose.hpp  frequency_table.hpp  hr_timer.hpp  intrinsic.hpp  io_format.hpp  pool_allocator.hpp  range.hpp  simd.hpp  simple_tree.hpp  wrapped_float.hpp
trunk/strats/: p4c6r-koyama-1.txt  p4c6r-koyama-2.txt  p4c6r-neuwirth.txt
trunk/tests/: test-mmstrat.pl
wiki/: Building.wiki  CMakeLists.txt  Manual.wiki  Overview.wiki  Profiling.wiki  ReleaseNotes.wiki  mmstrat.wiki
(+5 files in other folders)
